@@ -1,9 +1,14 @@
 import outskirts.client.main.Main;
 import outskirts.util.CollectionUtils;
 import outskirts.util.FileUtils;
+import outskirts.util.ReflectionUtils;
 import outskirts.util.SystemUtil;
 
 import java.io.File;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.net.URL;
+import java.net.URLClassLoader;
 
 /**
  * tmp launcher class. simple setup and launch main program
@@ -12,7 +17,7 @@ public class Start {
 
     public static void main(String[] args) throws Exception {
 
-        // DEFAULT: -ea
+        // DEFAULT: -ea  (java9+:) --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
         // OSX: -XstartOnFirstThread -Djava.awt.headless=true -ea
         System.setProperty("org.lwjgl.librarypath", "libraries/platform/"+ SystemUtil.OS_NAME.toLowerCase());
 
@@ -23,8 +28,6 @@ public class Start {
                 }
             }
         }
-
-
 
 
 
